--- a/movies_db/package.json
+++ b/movies_db/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/card": "^2.0.28",
+    "@nextui-org/image": "^2.0.27",
     "@nextui-org/react": "^2.3.6",
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.8",
